# GyroEngine

./: .gitignore  CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt
apps/GCube/: CMakeLists.txt  main.cpp
apps/GCube/content/shaders/: blur_h.frag  blur_v.frag  fullscreen_quad.vert  invert_color.frag
apps/GCube/content/shaders/geometry/: object.frag  object.vert
cmake/: copy_directory_to.cmake  precompile_shader.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  engine.cpp  engine.h
src/core/content/primitives/: cube.glb
src/core/content/shaders/geometry/: object.frag  object.vert
src/core/content/shaders/post_effects/: sky.frag
src/modules/platform/: CMakeLists.txt  input.cpp  input.h  window.cpp  window.h
src/modules/platform/input/: input.cpp  input.h  inputils.h  inpututils.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/modules/renderer/: CMakeLists.txt
src/modules/renderer/commands/: clear_color_command.h  clear_depth_command.h  command.h  material_command.h  mesh_command.h  particle_command.h  sky_command.h
src/modules/renderer/context/: rendering_device.cpp  rendering_device.h
src/modules/renderer/factories/: geometry_factory.cpp  geometry_factory.h  mesh_factory.cpp  mesh_factory.h
src/modules/renderer/implementation/: glm_implementation.cpp  glm_implementation.h  stb_implementation.cpp  stb_implementation.h  vma_implementation.cpp  vma_implementation.h  volk_implementation.cpp  volk_implementation.h
src/modules/renderer/rendering/: render_pipeline.cpp  render_pipeline.h  render_step.h  renderer.cpp  renderer.h  viewport.h
src/modules/renderer/rendering/commands/: command.h
src/modules/renderer/rendering/render_steps/: clear_step.cpp  clear_step.h  post_step.cpp  post_step.h  scene_step.cpp  scene_step.h
src/modules/renderer/rendering/rendergraph/: render_graph.cpp  render_graph.h  render_pass.h
src/modules/renderer/rendering/rendergraph/passes/: clear_pass.h  scene_pass.h
src/modules/renderer/resources/: buffer.cpp  buffer.h  buffer_types.h  command_batch.cpp  command_batch.h  descriptor_layout.cpp  descriptor_layout.h  descriptor_manager.cpp  descriptor_manager.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  device_resource.h  geometry.cpp  geometry.h  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  pipeline_bindings.cpp  pipeline_bindings.h  push_constant.h  sampler.cpp  sampler.h  shader.cpp  shader.h  texture.cpp
src/modules/renderer/resources/buffer/: buffer.cpp  buffer_types.h  light_data.h
src/modules/renderer/resources/object/: material.cpp  material.h  mesh.cpp  mesh.h
src/modules/renderer/resources/pipeline/: pipeline.cpp  pipeline.h  pipeline_bindings.h  shader.cpp
src/modules/renderer/resources/texture/: image.cpp  image.h  texture.cpp  texture.h
src/modules/renderer/utilities/: device.h  image.h  mesh.h  pipeline.h  renderer.h  shader.h
src/modules/utilities/: CMakeLists.txt  singleton.h  types.h  utils.h
src/modules/utilities/debug/: logger.cpp  logger.h  printer.cpp  printer.h
src/modules/utilities/tasks/: maid.cpp  maid.h
src/modules/xr/: CMakeLists.txt  xreality.cpp  xreality.h
